<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/button_off"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/button_off"
            style="@style/RadioButtonStyle"
            android:onClick="onRadioButtonClicked"
            android:text="@string/button_off" />

        <RadioButton
            android:id="@+id/button_torch"
            style="@style/RadioButtonStyle"
            android:onClick="onRadioButtonClicked"
            android:text="@string/button_torch" />

        <RadioButton
            android:id="@+id/button_sos"
            style="@style/RadioButtonStyle"
            android:onClick="onRadioButtonClicked"
            android:text="@string/button_sos" />

        <RadioButton
            android:id="@+id/button_strobe"
            style="@style/RadioButtonStyle"
            android:onClick="onRadioButtonClicked"
            android:text="@string/button_strobe" />

        <RadioButton
            android:id="@+id/button_flasher"
            style="@style/RadioButtonStyle"
            android:onClick="onRadioButtonClicked"
            android:text="@string/button_flasher" />
    </RadioGroup>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:paddingTop="10dp" />
</LinearLayout>
